--- a/poetry-multilang-site/pyproject.toml
+++ b/poetry-multilang-site/pyproject.toml
@@ -14,6 +14,8 @@ django-rosetta = "^0.10.0"
 tox = "^4.15.1"
 python-gettext = "^5.0"
 django-modeltranslation = "^0.19.3"
+django-environ = "^0.11.2"
+replicate = "^0.26.1"
 
 
 [build-system]
